--- a/horarios/index.html
+++ b/horarios/index.html
@@ -1,7 +1,6 @@
-
-    <html>
-    <head>
-        <style>
+<html>
+<head>
+    <style>
 
 body { margin-top: -50px; }
  /* Table Styles */
@@ -10,6 +9,7 @@ table {
     border-collapse: collapse;
     font-family: Arial, sans-serif;
     margin: 20px 0;
+    position: relative;
 }
 
 /* Header Row */
@@ -28,13 +28,10 @@ th {
     font-weight: normal;
     background-color: #fff;
     font-size: 20px;
+    position: relative;
 }
 
 /* Table Cells */
-tr {
-	height: 80px;
-}
-
 td {
     border: 1px solid #000;
     padding: 8px;
@@ -42,6 +39,7 @@ td {
     font-size: 14px;
     width: 100px;
     vertical-align: middle;
+    position: relative;
 }
 
 /* Time Column */
@@ -100,18 +98,29 @@ table {
 }
 
 @media print {
-            table {
-                page-break-inside: avoid; /* Avoid breaking within this element */
-                page-break-before: always; /* Ensure this element starts on a new page */
-                page-break-after: always;  /* Ensure the next element starts on a new page */
-            }
-        }
+    table {
+        page-break-inside: avoid; /* Avoid breaking within this element */
+        page-break-before: always; /* Ensure this element starts on a new page */
+        page-break-after: always;  /* Ensure the next element starts on a new page */
+    }
+}
 
-        </style>
-    </head>
-    <body>
+/* New Class Location Styling */
+.class-location {
+    position: absolute;
+    bottom: 4px;
+    right: 4px;
+    font-size: 10px;
+    color: #000;
+}
 
-<table><caption>Sistemas para Internet - 1º Período</caption><thead><tr><th></th><th>Segunda</th><th>Terça</th><th>Quarta</th><th>Quinta</th><th>Sexta</th></tr></thead><tbody><tr><td>TARDE<br>13:30 - 14:20</td><td rowspan=3>Algoritmos<br>Darueck</td><td rowspan=2>Interação Homem-Computador<br>Álvaro</td><td rowspan=2>Matemática Aplicada<br>Paulo Roberto</td><td rowspan=2>Interação Homem-Computador<br>Álvaro</td><td rowspan=3>Inglês Técnico<br>Cristiane Neves</td></tr><tr><td>TARDE<br>14:20 - 15:10</td></tr><tr><td>TARDE<br>15:10 - 16:00</td><td rowspan=1>Português Instrumental<br>Francisco Marcelo</td><td rowspan=1>Organização e Arquitetura de Computadores<br>Gustavo</td><td rowspan=1>Algoritmos<br>Darueck</td></tr><tr><td>TARDE<br>16:00 - 16:20</td><td colspan="100%">Intervalo</td></tr><tr><td>TARDE<br>16:20 - 17:10</td><td rowspan=2>Organização e Arquitetura de Computadores<br>Gustavo</td><td rowspan=2>Português Instrumental<br>Francisco Marcelo</td><td rowspan=2>Organização e Arquitetura de Computadores<br>Gustavo</td><td rowspan=2>Algoritmos<br>Darueck</td><td rowspan=2>Matemática Aplicada<br>Paulo Roberto</td></tr><tr><td>TARDE<br>17:10 - 18:00</td></tr></tbody></table>
-<table><caption>Sistemas para Internet - 3º Período</caption><thead><tr><th></th><th>Segunda</th><th>Terça</th><th>Quarta</th><th>Quinta</th><th>Sexta</th></tr></thead><tbody><tr><td>TARDE<br>13:30 - 14:20</td><td rowspan=2>Banco de Dados II<br>Álvaro</td><td rowspan=2>Engenharia de Software II<br>Flávio</td><td rowspan=2>Banco de Dados II<br>Álvaro</td><td rowspan=2>Construção de Páginas Web II<br>Marlon</td><td rowspan=2>Engenharia de Software II<br>Flávio</td></tr><tr><td>TARDE<br>14:20 - 15:10</td></tr><tr><td>TARDE<br>15:10 - 16:00</td><td rowspan=1>Construção de Páginas Web II<br>Marlon</td><td rowspan=1>Estatística<br>Erasmo</td><td rowspan=1>Orientação a Objetos<br>Jonas Pontes</td><td rowspan=1>Redes de Computadores I<br>Ericson</td><td rowspan=1>Orientação a Objetos<br>Jonas Pontes</td></tr><tr><td>TARDE<br>16:00 - 16:20</td><td colspan="100%">Intervalo</td></tr><tr><td>TARDE<br>16:20 - 17:10</td><td rowspan=1>Construção de Páginas Web II<br>Marlon</td><td rowspan=2>Estatística<br>Erasmo</td><td rowspan=2>Orientação a Objetos<br>Jonas Pontes</td><td rowspan=2>Redes de Computadores I<br>Ericson</td><td rowspan=2>Orientação a Objetos<br>Jonas Pontes</td></tr><tr><td>TARDE<br>17:10 - 18:00</td><td rowspan=1>Redes de Computadores I<br>Ericson</td></tr></tbody></table>
-<table><caption>Sistemas para Internet - 5º Período</caption><thead><tr><th></th><th>Segunda</th><th>Terça</th><th>Quarta</th><th>Quinta</th><th>Sexta</th><th>Sábado</th></tr></thead><tbody><tr><td>MANHÃ<br>07:50 - 08:40</td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=2>Sistemas Distribuídos<br>Breno</td></tr><tr><td>MANHÃ<br>08:40 - 09:30</td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td></tr><tr><td>MANHÃ<br>09:30 - 09:50</td><td colspan="100%">Intervalo</td></tr><tr><td>MANHÃ<br>09:50 - 10:40</td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1>Sistemas Distribuídos<br>Breno</td></tr><tr><td>TARDE<br>13:30 - 14:20</td><td rowspan=3>Laboratório de Desenvolvimento de Software I<br>Flávio</td><td rowspan=2>Metodologia da Pesquisa para Computação<br>Darueck</td><td rowspan=3>Legislação Aplicada à Informática<br>Cláudia</td><td rowspan=2>Metodologia da Pesquisa para Computação<br>Darueck</td><td rowspan=3>Programação Web II<br>Marlon</td><td rowspan=1></td></tr><tr><td>TARDE<br>14:20 - 15:10</td><td rowspan=1></td></tr><tr><td>TARDE<br>15:10 - 16:00</td><td rowspan=1>Laboratório de Desenvolvimento de Software I<br>Flávio</td><td rowspan=1>Programação Web II<br>Marlon</td><td rowspan=1></td></tr><tr><td>TARDE<br>16:00 - 16:20</td><td colspan="100%">Intervalo</td></tr><tr><td>TARDE<br>16:20 - 17:10</td><td rowspan=2>Metodologia da Pesquisa para Computação<br>Darueck</td><td rowspan=2>Laboratório de Desenvolvimento de Software I<br>Flávio</td><td rowspan=2>Desenvolvimento para Dispositivos Móveis I<br>Flávio</td><td rowspan=2>Programação Web II<br>Marlon</td><td rowspan=2>Desenvolvimento para Dispositivos Móveis I<br>Flávio</td><td rowspan=1></td></tr><tr><td>TARDE<br>17:10 - 18:00</td><td rowspan=1></td></tr></tbody></table>
+</style>
+</head>
+<body>
+
+<table><caption>Sistemas para Internet - 1º Período</caption><thead><tr><th></th><th>Segunda</th><th>Terça</th><th>Quarta</th><th>Quinta</th><th>Sexta</th></tr></thead><tbody><tr><td>TARDE<br>13:30 - 14:20</td><td rowspan=3>Algoritmos<br>Darueck<span class="class-location">LAB1</span></td><td rowspan=2>Interação Homem-Computador<br>Álvaro<span class="class-location">LAB1</span></td><td rowspan=2>Matemática Aplicada<br>Paulo Roberto<span class="class-location">SALA</span></td><td rowspan=2>Interação Homem-Computador<br>Álvaro<span class="class-location">LAB1</span></td><td rowspan=3>Inglês Técnico<br>Cristiane Neves<span class="class-location">SALA</span></td></tr><tr><td>TARDE<br>14:20 - 15:10</td></tr><tr><td>TARDE<br>15:10 - 16:00</td><td rowspan=1>Português Instrumental<br>Francisco Marcelo<span class="class-location">SALA</span></td><td rowspan=1>Organização e Arquitetura de Computadores<br>Gustavo<span class="class-location">LAB1</span></td><td rowspan=1>Algoritmos<br>Darueck<span class="class-location">LAB1</span></td></tr><tr><td>TARDE<br>16:00 - 16:20</td><td colspan="100%" class="interval">Intervalo</td></tr><tr><td>TARDE<br>16:20 - 17:10</td><td rowspan=2>Organização e Arquitetura de Computadores<br>Gustavo<span class="class-location">LAB1</span></td><td rowspan=2>Português Instrumental<br>Francisco Marcelo<span class="class-location">SALA</span></td><td rowspan=2>Organização e Arquitetura de Computadores<br>Gustavo<span class="class-location">LAB1</span></td><td rowspan=2>Algoritmos<br>Darueck<span class="class-location">LAB1</span></td><td rowspan=2>Matemática Aplicada<br>Paulo Roberto<span class="class-location">SALA</span></td></tr><tr><td>TARDE<br>17:10 - 18:00</td></tr></tbody></table>
+
+<table><caption>Sistemas para Internet - 3º Período</caption><thead><tr><th></th><th>Segunda</th><th>Terça</th><th>Quarta</th><th>Quinta</th><th>Sexta</th></tr></thead><tbody><tr><td>TARDE<br>13:30 - 14:20</td><td rowspan=2>Banco de Dados II<br>Álvaro<span class="class-location">LAB2</span></td><td rowspan=2>Engenharia de Software II<br>Flávio<span class="class-location">LAB2</span></td><td rowspan=2>Banco de Dados II<br>Álvaro<span class="class-location">LAB2</span></td><td rowspan=2>Construção de Páginas Web II<br>Marlon<span class="class-location">LAB2</span></td><td rowspan=2>Engenharia de Software II<br>Flávio<span class="class-location">LAB2</span></td></tr><tr><td>TARDE<br>14:20 - 15:10</td></tr><tr><td>TARDE<br>15:10 - 16:00</td><td rowspan=1>Construção de Páginas Web II<br>Marlon<span class="class-location">LAB2</span></td><td rowspan=1>Estatística<br>Erasmo<span class="class-location">SALA</span></td><td rowspan=1>Orientação a Objetos<br>Jonas Pontes<span class="class-location">LAB2</span></td><td rowspan=1>Redes de Computadores I<br>Ericson<span class="class-location">LAB2</span></td><td rowspan=1>Orientação a Objetos<br>Jonas Pontes<span class="class-location">LAB2</span></td></tr><tr><td>TARDE<br>16:00 - 16:20</td><td colspan="100%" class="interval">Intervalo</td></tr><tr><td>TARDE<br>16:20 - 17:10</td><td rowspan=1>Construção de Páginas Web II<br>Marlon<span class="class-location">LAB2</span></td><td rowspan=2>Estatística<br>Erasmo<span class="class-location">SALA</span></td><td rowspan=2>Orientação a Objetos<br>Jonas Pontes<span class="class-location">LAB2</span></td><td rowspan=2>Redes de Computadores I<br>Ericson<span class="class-location">LAB2</span></td><td rowspan=2>Orientação a Objetos<br>Jonas Pontes<span class="class-location">LAB2</span></td></tr><tr><td>TARDE<br>17:10 - 18:00</td><td rowspan=1>Redes de Computadores I<br>Ericson<span class="class-location">LAB2</span></td></tr></tbody></table>
+
+<table><caption>Sistemas para Internet - 5º Período</caption><thead><tr><th></th><th>Segunda</th><th>Terça</th><th>Quarta</th><th>Quinta</th><th>Sexta</th><th>Sábado</th></tr></thead><tbody><tr><td>MANHÃ<br>07:50 - 08:40</td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=2>Sistemas Distribuídos<br>Breno<span class="class-location">LAB1</span></td></tr><tr><td>MANHÃ<br>08:40 - 09:30</td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td></tr><tr><td>MANHÃ<br>09:30 - 09:50</td><td colspan="100%" class="interval">Intervalo</td></tr><tr><td>MANHÃ<br>09:50 - 10:40</td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1>Sistemas Distribuídos<br>Breno<span class="class-location">LAB1</span></td></tr><tr><td>TARDE<br>13:30 - 14:20</td><td rowspan=3>Laboratório de Desenvolvimento de Software I<br>Flávio<span class="class-location">LAB1</span></td><td rowspan=2>Metodologia da Pesquisa para Computação<br>Darueck<span class="class-location">LAB1</span></td><td rowspan=3>Legislação Aplicada à Informática<br>Cláudia<span class="class-location">SALA</span></td><td rowspan=2>Metodologia da Pesquisa para Computação<br>Darueck<span class="class-location">LAB1</span></td><td rowspan=3>Programação Web II<br>Marlon<span class="class-location">LAB1</span></td><td rowspan=1></td></tr><tr><td>TARDE<br>14:20 - 15:10</td><td rowspan=1></td></tr><tr><td>TARDE<br>15:10 - 16:00</td><td rowspan=1>Laboratório de Desenvolvimento de Software I<br>Flávio<span class="class-location">LAB1</span></td><td rowspan=1>Programação Web II<br>Marlon<span class="class-location">LAB1</span></td><td rowspan=1></td></tr><tr><td>TARDE<br>16:00 - 16:20</td><td colspan="100%" class="interval">Intervalo</td></tr><tr><td>TARDE<br>16:20 - 17:10</td><td rowspan=2>Metodologia da Pesquisa para Computação<br>Darueck<span class="class-location">LAB1</span></td><td rowspan=2>Laboratório de Desenvolvimento de Software I<br>Flávio<span class="class-location">LAB1</span></td><td rowspan=2>Desenvolvimento para Dispositivos Móveis I<br>Flávio<span class="class-location">LAB1</span></td><td rowspan=2>Programação Web II<br>Marlon<span class="class-location">LAB1</span></td><td rowspan=2>Desenvolvimento para Dispositivos Móveis I<br>Flávio<span class="class-location">LAB1</span></td><td rowspan=1></td></tr><tr><td>TARDE<br>17:10 - 18:00</td><td rowspan=1></td></tr></tbody></table>
 </body></html>
