--- a/ifac_si_app/src/index.html
+++ b/ifac_si_app/src/index.html
@@ -5,12 +5,11 @@
   <title>IfacSiApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:;">
-  <link rel="icon" type="image/x-icon" href="./assets/images/logo-login.svg">
+  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self'; img-src 'self' data:;">  <link rel="icon" type="image/x-icon" href="./assets/images/logo-login.svg"> -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJ62nP/EfQCEry8C7+6pEWgK3rBQqkE1OGVo6QAWarIm2y" crossorigin="anonymous"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJ62nP/EfQCEry8C7+6pEWgK3rBQqkE1OGVo6QAWarIm2y" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
