--- a/horarios/index.html
+++ b/horarios/index.html
@@ -3,7 +3,7 @@
     <style>
 
 body { margin-top: -50px; }
- /* Table Styles */
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -12,7 +12,6 @@ table {
     position: relative;
 }
 
-/* Header Row */
 table caption {
     font-size: 30px;
     text-align: center;
@@ -20,7 +19,6 @@ table caption {
     padding-top: 100px;
 }
 
-/* Table Headers */
 th {
     border: 1px solid #000;
     padding: 14px;
@@ -31,7 +29,6 @@ th {
     position: relative;
 }
 
-/* Table Cells */
 tr {
 	height: 80px;
 }
@@ -45,7 +42,6 @@ td {
     position: relative;
 }
 
-/* Time Column */
 td:first-child {
     font-size: 12px;
     width: 100px;
@@ -53,39 +49,32 @@ td:first-child {
     padding-left: 10px;
 }
 
-/* Lab Information */
 .lab-info {
     font-weight: normal;
 }
 
-/* Teacher Names */
 .teacher-name {
     font-size: 13px;
 }
 
-/* Interval Row */
 .interval {
     background-color: #fff;
     font-style: italic;
 }
 
-/* Additional Styling */
 table {
     max-width: 1200px;
     margin: 0 auto;
 }
 
-/* Optional: Hover effect */
 tr:hover {
     background-color: #f5f5f5;
 }
 
-/* Border for the entire table */
 table {
     border: 2px solid #000;
 }
 
-/* Media Query for Responsive Design */
 @media screen and (max-width: 768px) {
     table {
         font-size: 12px;
@@ -102,13 +91,12 @@ table {
 
 @media print {
     table {
-        page-break-inside: avoid; /* Avoid breaking within this element */
-        page-break-before: always; /* Ensure this element starts on a new page */
-        page-break-after: always;  /* Ensure the next element starts on a new page */
+        page-break-inside: avoid;
+        page-break-before: always;
+        page-break-after: always;
     }
 }
 
-/* New Class Location Styling */
 .class-location {
     position: absolute;
     bottom: 4px;
@@ -121,9 +109,170 @@ table {
 </head>
 <body>
 
-<table><caption>Sistemas para Internet - 1º Período</caption><thead><tr><th></th><th>Segunda</th><th>Terça</th><th>Quarta</th><th>Quinta</th><th>Sexta</th></tr></thead><tbody><tr><td>TARDE<br>13:30 - 14:20</td><td rowspan=3>Algoritmos<br>Darueck<span class="class-location">LAB5</span></td><td rowspan=2>Interação Homem-Computador<br>Álvaro<span class="class-location">LAB5</span></td><td rowspan=2>Matemática Aplicada<br>Paulo Roberto<span class="class-location">SALA B209</span></td><td rowspan=2>Interação Homem-Computador<br>Álvaro<span class="class-location">LAB5</span></td><td rowspan=3>Inglês Técnico<br>Anna Carolina<span class="class-location">SALA B209</span></td></tr><tr><td>TARDE<br>14:20 - 15:10</td></tr><tr><td>TARDE<br>15:10 - 16:00</td><td rowspan=1>Português Instrumental<br>Francisco Marcelo<span class="class-location">SALA B209</span></td><td rowspan=1>Organização e Arquitetura de Computadores<br>Gustavo<span class="class-location">LAB5</span></td><td rowspan=1>Algoritmos<br>Darueck<span class="class-location">LAB5</span></td></tr><tr><td>TARDE<br>16:00 - 16:20</td><td colspan="100%" class="interval">Intervalo</td></tr><tr><td>TARDE<br>16:20 - 17:10</td><td rowspan=2>Organização e Arquitetura de Computadores<br>Gustavo<span class="class-location">LAB5</span></td><td rowspan=2>Português Instrumental<br>Francisco Marcelo<span class="class-location">SALA B209</span></td><td rowspan=2>Organização e Arquitetura de Computadores<br>Gustavo<span class="class-location">LAB5</span></td><td rowspan=2>Algoritmos<br>Darueck<span class="class-location">LAB5</span></td><td rowspan=2>Matemática Aplicada<br>Paulo Roberto<span class="class-location">SALA B209</span></td></tr><tr><td>TARDE<br>17:10 - 18:00</td></tr></tbody></table>
+<table>
+  <caption>Sistemas para Internet - 2º Período</caption>
+  <thead>
+    <tr>
+      <th></th>
+      <th>Segunda</th>
+      <th>Terça</th>
+      <th>Quarta</th>
+      <th>Quinta</th>
+      <th>Sexta</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>TARDE<br>13:30 - 14:20</td>
+      <td rowspan="3">Construção de Páginas Web I<br>Darueck Campos<span class="class-location">LAB 2</span></td>
+      <td rowspan="3">Linguagens de Programação<br>Alvaro Rios<span class="class-location">LAB 5</span></td>
+      <td rowspan="3">Estrutura de Dados<br>Jonas Pontes<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Engenharia de Software I<br>Flavio Farias<span class="class-location">LAB 2</span></td>
+      <td rowspan="3">Estrutura de Dados<br>Jonas Pontes<span class="class-location">LAB 5</span></td>
+    </tr>
+    <tr>
+      <td>TARDE<br>14:20 - 15:10</td>
+    </tr>
+    <tr>
+      <td>TARDE<br>15:10 - 16:00</td>
+      <td>Construção de Páginas Web I<br>Darueck Campos<span class="class-location">LAB 2</span></td>
+    </tr>
+    <tr>
+      <td>TARDE<br>16:00 - 16:20</td>
+      <td colspan="100%" class="interval">Intervalo</td>
+    </tr>
+    <tr>
+      <td>TARDE<br>16:20 - 17:10</td>
+      <td rowspan="2">Engenharia de Software I<br>Flavio Farias<span class="class-location">LAB 2</span></td>
+      <td rowspan="2">Sistemas Operacionais<br>Darueck Campos<span class="class-location">B 209</span></td>
+      <td rowspan="2">Banco de Dados I<br>Airton Gaio<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Sistemas Operacionais<br>Darueck Campos<span class="class-location">LAB 2</span></td>
+      <td rowspan="2">Banco de Dados I<br>Airton Gaio<span class="class-location">LAB 5</span></td>
+    </tr>
+    <tr>
+      <td>TARDE<br>17:10 - 18:00</td>
+    </tr>
+  </tbody>
+</table>
 
-<table><caption>Sistemas para Internet - 3º Período</caption><thead><tr><th></th><th>Segunda</th><th>Terça</th><th>Quarta</th><th>Quinta</th><th>Sexta</th></tr></thead><tbody><tr><td>TARDE<br>13:30 - 14:20</td><td rowspan=2>Banco de Dados II<br>Álvaro<span class="class-location">LAB2</span></td><td rowspan=2>Engenharia de Software II<br>Flávio<span class="class-location">LAB2</span></td><td rowspan=2>Banco de Dados II<br>Álvaro<span class="class-location">LAB5</span></td><td rowspan=2>Construção de Páginas Web II<br>Marlon<span class="class-location">LAB2</span></td><td rowspan=2>Engenharia de Software II<br>Flávio<span class="class-location">LAB2</span></td></tr><tr><td>TARDE<br>14:20 - 15:10</td></tr><tr><td>TARDE<br>15:10 - 16:00</td><td rowspan=1>Construção de Páginas Web II<br>Marlon<span class="class-location">LAB2</span></td><td rowspan=1>Estatística<br>Erasmo<span class="class-location">SALA B210</span></td><td rowspan=1>Orientação a Objetos<br>Jonas Pontes<span class="class-location">LAB2</span></td><td rowspan=1>Redes de Computadores I<br>Ericson<span class="class-location">LAB2</span></td><td rowspan=1>Orientação a Objetos<br>Jonas Pontes<span class="class-location">LAB2</span></td></tr><tr><td>TARDE<br>16:00 - 16:20</td><td colspan="100%" class="interval">Intervalo</td></tr><tr><td>TARDE<br>16:20 - 17:10</td><td rowspan=1>Construção de Páginas Web II<br>Marlon<span class="class-location">LAB2</span></td><td rowspan=2>Estatística<br>Erasmo<span class="class-location">SALA B210</span></td><td rowspan=2>Orientação a Objetos<br>Jonas Pontes<span class="class-location">LAB2</span></td><td rowspan=2>Redes de Computadores I<br>Ericson<span class="class-location">LAB2</span></td><td rowspan=2>Orientação a Objetos<br>Jonas Pontes<span class="class-location">LAB2</span></td></tr><tr><td>TARDE<br>17:10 - 18:00</td><td rowspan=1>Redes de Computadores I<br>Ericson<span class="class-location">LAB2</span></td></tr></tbody></table>
 
-<table><caption>Sistemas para Internet - 5º Período</caption><thead><tr><th></th><th>Segunda</th><th>Terça</th><th>Quarta</th><th>Quinta</th><th>Sexta</th><th>Sábado</th></tr></thead><tbody><tr><td>MANHÃ<br>09:50 - 10:40</td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=2>Sistemas Distribuídos<br>Breno<span class="class-location">LAB4</span></td></tr><tr><td>MANHÃ<br>10:40 - 11:30</td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td></tr><tr><td>MANHÃ<br>11:30 - 12:20</td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1></td><td rowspan=1>Sistemas Distribuídos<br>Breno<span class="class-location">LAB4</span></td></tr><tr><td>TARDE<br>13:30 - 14:20</td><td rowspan=3>Laboratório de Desenvolvimento de Software I<br>Flávio<span class="class-location">LAB4</span></td><td rowspan=2>Metodologia da Pesquisa para Computação<br>Darueck<span class="class-location">LAB4</span></td><td rowspan=3>Legislação Aplicada à Informática<br>Cláudia<span class="class-location">SALA B211</span></td><td rowspan=2>Metodologia da Pesquisa para Computação<br>Darueck<span class="class-location">LAB4</span></td><td rowspan=3>Programação Web II<br>Marlon<span class="class-location">LAB4</span></td><td rowspan=1></td></tr><tr><td>TARDE<br>14:20 - 15:10</td><td rowspan=1></td></tr><tr><td>TARDE<br>15:10 - 16:00</td><td rowspan=1>Laboratório de Desenvolvimento de Software I<br>Flávio<span class="class-location">LAB4</span></td><td rowspan=1>Programação Web II<br>Marlon<span class="class-location">LAB4</span></td><td rowspan=1></td></tr><tr><td>TARDE<br>16:00 - 16:20</td><td colspan="100%" class="interval">Intervalo</td></tr><tr><td>TARDE<br>16:20 - 17:10</td><td rowspan=2>Metodologia da Pesquisa para Computação<br>Darueck<span class="class-location">LAB4</span></td><td rowspan=2>Laboratório de Desenvolvimento de Software I<br>Flávio<span class="class-location">LAB4</span></td><td rowspan=2>Desenvolvimento para Dispositivos Móveis I<br>Flávio<span class="class-location">LAB4</span></td><td rowspan=2>Programação Web II<br>Marlon<span class="class-location">LAB4</span></td><td rowspan=2>Desenvolvimento para Dispositivos Móveis I<br>Flávio<span class="class-location">LAB4</span></td><td rowspan=1></td></tr><tr><td>TARDE<br>17:10 - 18:00</td><td rowspan=1></td></tr></tbody></table>
+<table>
+  <caption>Sistemas para Internet - 4º Período</caption>
+  <thead>
+    <tr>
+      <th></th>
+      <th>Segunda</th>
+      <th>Terça</th>
+      <th>Quarta</th>
+      <th>Quinta</th>
+      <th>Sexta</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>TARDE<br>13:30 - 14:20</td>
+      <td rowspan="2">Interação Homem Computador<br>Willian Bessa<span class="class-location">LAB 5</span></td>
+      <td rowspan="3">Empreendedorismo<br>Henrique Canizo<span class="class-location">B 210</span></td>
+      <td rowspan="3">Comércio Eletrônico<br>Flavio Farias<span class="class-location">LAB 2</span></td>
+      <td rowspan="3">Programação Web I<br>Marlon Teixeira<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Segurança da Informação<br>Gustavo Cardial<span class="class-location">LAB 2</span></td>
+    </tr>
+    <tr>
+      <td>TARDE<br>14:20 - 15:10</td>
+    </tr>
+    <tr>
+      <td>TARDE<br>15:10 - 16:00</td>
+      <td>Programação Web I<br>Marlon Teixeira<span class="class-location">LAB 5</span></td>
+      <td>Interação Homem Computador<br>Willian Bessa<span class="class-location">LAB 2</span></td>
+    </tr>
+    <tr>
+      <td>TARDE<br>16:00 - 16:20</td>
+      <td colspan="100%" class="interval">Intervalo</td>
+    </tr>
+    <tr>
+      <td>TARDE<br>16:20 - 17:10</td>
+      <td rowspan="2">Programação Web I<br>Marlon Teixeira<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Redes de Computadores II<br>Ari Palu<span class="class-location">B 210</span></td>
+      <td rowspan="2">Informática e Sociedade<br>Tania Facanha<span class="class-location">B 210</span></td>
+      <td rowspan="2">Segurança da Informação<br>Gustavo Cardial<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Redes de Computadores II<br>Ari Palu<span class="class-location">LAB 2</span></td>
+    </tr>
+    <tr>
+      <td>TARDE<br>17:10 - 18:00</td>
+    </tr>
+  </tbody>
+</table>
+
+
+<table>
+  <caption>Sistemas para Internet - 6º Período</caption>
+  <thead>
+    <tr>
+      <th></th>
+      <th>Segunda</th>
+      <th>Terça</th>
+      <th>Quarta</th>
+      <th>Quinta</th>
+      <th>Sexta</th>
+      <th>Sábado</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>MANHÃ<br>09:50 - 12:20</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td>Inteligência Artificial<br>Breno Silveira<span class="class-location">LAB 1</span></td>
+    </tr>
+
+    <tr>
+      <td>TARDE<br>13:30 - 14:20</td>
+      <td rowspan="3">Laboratório II<br>Flavio Farias<span class="class-location">LAB 4</span></td>
+      <td></td>
+      <td></td>
+      <td rowspan="3">Libras<br>Cristiane Nogueira<span class="class-location">LAB 4</span></td>
+      <td rowspan="2">Governança de TI<br>Airton Gaio<span class="class-location">LAB 4</span></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>TARDE<br>14:20 - 15:10</td>
+      <td></td>
+      <td rowspan="2">Governança de TI<br>Airton Gaio<span class="class-location">LAB 4</span></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>TARDE<br>15:10 - 16:00</td>
+      <td></td>
+      <td>Laboratório II<br>Flavio Farias<span class="class-location">LAB 4</span></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>TARDE<br>16:00 - 16:20</td>
+      <td colspan="6" class="interval">Intervalo</td>
+    </tr>
+    <tr>
+      <td>TARDE<br>16:20 - 17:10</td>
+      <td></td>
+      <td></td>
+      <td rowspan="2">Dispositivos Móveis II<br>Flavio Farias<span class="class-location">LAB 4</span></td>
+      <td rowspan="2">Dispositivos Móveis II<br>Flavio Farias<span class="class-location">LAB 4</span></td>
+      <td rowspan="2">Laboratório II<br>Flavio Farias<span class="class-location">LAB 4</span></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>TARDE<br>17:10 - 18:00</td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
+
+
+
+
+
 </body></html>
