--- a/insta/index.html
+++ b/insta/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://instagram.com/si_ifac">
+    <meta http-equiv="refresh" content="0; url=https://eventos.ifac.edu.br/evento/teckweek-2025/">
     <title>Redirecionando...</title>
 </head>
 <body>
-    <p>Se você não for redirecionado automaticamente, siga este <a href="https://instagram.com/si_ifac">link para nosso Instagram</a>.</p>
+    <p>Se você não for redirecionado automaticamente, siga este <a href="https://eventos.ifac.edu.br/evento/teckweek-2025/">link</a>.</p>
 </body>
 </html>
