--- a/horarios/index.html
+++ b/horarios/index.html
@@ -124,18 +124,18 @@ table {
   <tbody>
     <tr>
       <td>TARDE<br>13:30 - 14:20</td>
-      <td rowspan="3">Construção de Páginas Web I<br>Darueck Campos<span class="class-location">LAB 2</span></td>
-      <td rowspan="3">Linguagens de Programação<br>Alvaro Rios<span class="class-location">LAB 5</span></td>
-      <td rowspan="3">Estrutura de Dados<br>Jonas Pontes<span class="class-location">LAB 5</span></td>
-      <td rowspan="2">Engenharia de Software I<br>Flavio Farias<span class="class-location">LAB 2</span></td>
-      <td rowspan="3">Estrutura de Dados<br>Jonas Pontes<span class="class-location">LAB 5</span></td>
+      <td rowspan="3">Algoritmos<br>Breno Silveira<span class="class-location">LAB 2</span></td>
+      <td rowspan="3">Organização e Arquitetura de Computadores<br>Gustavo Cardial<span class="class-location">LAB 5</span></td>
+      <td rowspan="3">Algoritmos<br>Breno Silveira<span class="class-location">LAB 5</span></td>
+      <td rowspan="3">Inglês Técnico<br>Francisco Marcelo<span class="class-location">LAB 2</span></td>
+      <td rowspan="2">Interação Homem-Computador<br>Mauricio Cunha<span class="class-location">LAB 5</span></td>
     </tr>
     <tr>
       <td>TARDE<br>14:20 - 15:10</td>
     </tr>
     <tr>
       <td>TARDE<br>15:10 - 16:00</td>
-      <td>Construção de Páginas Web I<br>Darueck Campos<span class="class-location">LAB 2</span></td>
+      <td>Português Instrumental<br>Risonete Amorim<span class="class-location">LAB 5</span></td>
     </tr>
     <tr>
       <td>TARDE<br>16:00 - 16:20</td>
@@ -143,11 +143,11 @@ table {
     </tr>
     <tr>
       <td>TARDE<br>16:20 - 17:10</td>
-      <td rowspan="2">Engenharia de Software I<br>Flavio Farias<span class="class-location">LAB 2</span></td>
-      <td rowspan="2">Sistemas Operacionais<br>Darueck Campos<span class="class-location">B 209</span></td>
-      <td rowspan="2">Banco de Dados I<br>Airton Gaio<span class="class-location">LAB 5</span></td>
-      <td rowspan="2">Sistemas Operacionais<br>Darueck Campos<span class="class-location">LAB 2</span></td>
-      <td rowspan="2">Banco de Dados I<br>Airton Gaio<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Interação Homem-Computador<br>Mauricio Cunha<span class="class-location">LAB 2</span></td>
+      <td rowspan="2">Matemática Aplicada<br>Paulo Roberto<span class="class-location">B 209</span></td>
+      <td rowspan="2">Matemática Aplicada<br>Paulo Roberto<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Organização e Arquitetura de Computadores<br>Gustavo Cardial<span class="class-location">LAB 2</span></td>
+      <td rowspan="2">Português Instrumental<br>Risonete Amorim<span class="class-location">LAB 5</span></td>
     </tr>
     <tr>
       <td>TARDE<br>17:10 - 18:00</td>
@@ -171,19 +171,19 @@ table {
   <tbody>
     <tr>
       <td>TARDE<br>13:30 - 14:20</td>
-      <td rowspan="2">Interação Homem Computador<br>Willian Bessa<span class="class-location">LAB 5</span></td>
-      <td rowspan="3">Empreendedorismo<br>Henrique Canizo<span class="class-location">B 210</span></td>
-      <td rowspan="3">Comércio Eletrônico<br>Flavio Farias<span class="class-location">LAB 2</span></td>
-      <td rowspan="3">Programação Web I<br>Marlon Teixeira<span class="class-location">LAB 5</span></td>
-      <td rowspan="2">Segurança da Informação<br>Gustavo Cardial<span class="class-location">LAB 2</span></td>
+      <td rowspan="3">Orientação a Objetos<br>Darueck Campos, Jonas Pontes<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Engenharia de Software II<br>Flavio Farias<span class="class-location">B 210</span></td>
+      <td rowspan="3">Orientação a Objetos<br>Darueck Campos, Jonas Pontes<span class="class-location">LAB 2</span></td>
+      <td rowspan="3">Redes de Computadores I<br>Gustavo Cardial<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Engenharia de Software II<br>Flavio Farias<span class="class-location">LAB 2</span></td>
     </tr>
     <tr>
       <td>TARDE<br>14:20 - 15:10</td>
     </tr>
     <tr>
       <td>TARDE<br>15:10 - 16:00</td>
-      <td>Programação Web I<br>Marlon Teixeira<span class="class-location">LAB 5</span></td>
-      <td>Interação Homem Computador<br>Willian Bessa<span class="class-location">LAB 2</span></td>
+      <td>Estatística<br>Erasmo Souza<span class="class-location">B 210</span></td>
+      <td>Redes de Computadores I<br>Gustavo Cardial<span class="class-location">LAB 2</span></td>
     </tr>
     <tr>
       <td>TARDE<br>16:00 - 16:20</td>
@@ -191,11 +191,11 @@ table {
     </tr>
     <tr>
       <td>TARDE<br>16:20 - 17:10</td>
-      <td rowspan="2">Programação Web I<br>Marlon Teixeira<span class="class-location">LAB 5</span></td>
-      <td rowspan="2">Redes de Computadores II<br>Ari Palu<span class="class-location">B 210</span></td>
-      <td rowspan="2">Informática e Sociedade<br>Tania Facanha<span class="class-location">B 210</span></td>
-      <td rowspan="2">Segurança da Informação<br>Gustavo Cardial<span class="class-location">LAB 5</span></td>
-      <td rowspan="2">Redes de Computadores II<br>Ari Palu<span class="class-location">LAB 2</span></td>
+      <td rowspan="2">Banco de Dados II<br>Alvaro Rios<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Estatística<br>Erasmo Souza<span class="class-location">B 210</span></td>
+      <td rowspan="2">Banco de Dados II<br>Alvaro Rios<span class="class-location">B 210</span></td>
+      <td rowspan="2">Construção de Página Web II<br>Marlon Teixeira<span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Construção de Página Web II<br>Marlon Teixeira<span class="class-location">LAB 2</span></td>
     </tr>
     <tr>
       <td>TARDE<br>17:10 - 18:00</td>
@@ -214,61 +214,44 @@ table {
       <th>Quarta</th>
       <th>Quinta</th>
       <th>Sexta</th>
-      <th>Sábado</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td>MANHÃ<br>09:50 - 12:20</td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td>Inteligência Artificial<br>Breno Silveira<span class="class-location">LAB 1</span></td>
-    </tr>
-
-    <tr>
       <td>TARDE<br>13:30 - 14:20</td>
-      <td rowspan="3">Laboratório II<br>Flavio Farias<span class="class-location">LAB 4</span></td>
-      <td></td>
-      <td></td>
-      <td rowspan="3">Libras<br>Cristiane Nogueira<span class="class-location">LAB 4</span></td>
-      <td rowspan="2">Governança de TI<br>Airton Gaio<span class="class-location">LAB 4</span></td>
-      <td></td>
+      <td rowspan="3">Laboratório de Desenvolvimento de Software I<br>Marlon Teixeira, Flavio Farias<span class="class-location">LAB 4</span></td>
+      <td rowspan="3">Metodologia da Pesquisa da Computação<br>Darueck Campos<span class="class-location">LAB 4</span></td>
+      <td rowspan="3">Programação Web II<br>Marlon Teixeira<span class="class-location">LAB 4</span></td>
+      <td rowspan="3">Laboratório de Desenvolvimento de Software I<br>Marlon Teixeira, Flavio Farias<span class="class-location">LAB 4</span></td>
+      <td rowspan="3">Programação Web II<br>Marlon Teixeira<span class="class-location">LAB 4</span></td>
     </tr>
     <tr>
       <td>TARDE<br>14:20 - 15:10</td>
-      <td></td>
-      <td rowspan="2">Governança de TI<br>Airton Gaio<span class="class-location">LAB 4</span></td>
-      <td></td>
     </tr>
     <tr>
       <td>TARDE<br>15:10 - 16:00</td>
-      <td></td>
-      <td>Laboratório II<br>Flavio Farias<span class="class-location">LAB 4</span></td>
-      <td></td>
     </tr>
     <tr>
       <td>TARDE<br>16:00 - 16:20</td>
-      <td colspan="6" class="interval">Intervalo</td>
+      <td colspan="100%" class="interval">Intervalo</td>
     </tr>
     <tr>
       <td>TARDE<br>16:20 - 17:10</td>
-      <td></td>
-      <td></td>
-      <td rowspan="2">Dispositivos Móveis II<br>Flavio Farias<span class="class-location">LAB 4</span></td>
-      <td rowspan="2">Dispositivos Móveis II<br>Flavio Farias<span class="class-location">LAB 4</span></td>
-      <td rowspan="2">Laboratório II<br>Flavio Farias<span class="class-location">LAB 4</span></td>
-      <td></td>
+      <td rowspan="2">Desenvolvimento para Dispositivos Móveis I<br>Flavio Farias<span class="class-location">LAB 4</span></td>
+      <td>Metodologia da Pesquisa da Computação<br>Darueck Campos<span class="class-location">LAB 4</span></td>
+      <td rowspan="2">Metodologia da Pesquisa da Computação<br>Darueck Campos<span class="class-location">LAB 4</span></td>
+      <td rowspan="2">Legislação Aplicada à Informática<br>Claudia Almeida<span class="class-location">LAB 4</span></td>
+      <td rowspan="2">Desenvolvimento para Dispositivos Móveis I<br>Flavio Farias<span class="class-location">LAB 4</span></td>
     </tr>
     <tr>
       <td>TARDE<br>17:10 - 18:00</td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>Legislação Aplicada à Informática<br>Claudia Almeida<span class="class-location">LAB 4</span></td>
     </tr>
   </tbody>
 </table>
+
+
+
+
 
 </body></html>
