Expand page container to fit table width on mobile

--- a/content/horarios/_index.html
+++ b/content/horarios/_index.html
@@ -4,6 +4,11 @@ sidebar: false
 ---
 
 <style>
+.container, .container--outer, .wrapper {
+    max-width: none;
+    min-width: fit-content;
+}
+
 .horarios table {
     width: 100%;
     border-collapse: collapse;
