--- a/content/horarios/_index.html
+++ b/content/horarios/_index.html
@@ -4,9 +4,11 @@ sidebar: false
 ---
 
 <style>
-.container, .container--outer, .wrapper {
-    max-width: none;
-    min-width: fit-content;
+@media screen and (max-width: 768px) {
+    .container, .container--outer, .wrapper {
+        max-width: none;
+        min-width: fit-content;
+    }
 }
 
 .horarios table {
