--- a/content/horarios/_index.html
+++ b/content/horarios/_index.html
@@ -100,7 +100,7 @@ sidebar: false
 <div class="horarios">
 
 <table>
-  <caption>Sistemas para Internet - 1º Período</caption>
+  <caption>Sistemas para Internet — 1º Período</caption>
   <thead>
     <tr>
       <th></th>
@@ -115,17 +115,17 @@ sidebar: false
     <tr>
       <td>TARDE<br>13:30 - 14:20</td>
       <td rowspan="3">Algoritmos<br><span class="teacher-name">Breno Silveira</span><span class="class-location">LAB 2</span></td>
-      <td rowspan="3">Arquitetura de Computadores<br><span class="teacher-name">Gustavo Cardial</span><span class="class-location">LAB 5</span></td>
-      <td rowspan="3">Algoritmos<br><span class="teacher-name">Breno Silveira</span><span class="class-location">LAB 5</span></td>
-      <td rowspan="3">Inglês Técnico<br><span class="teacher-name">Francisco Marcelo</span><span class="class-location">LAB 2</span></td>
-      <td rowspan="2">IHC<br><span class="teacher-name">Mauricio Cunha</span><span class="class-location">LAB 5</span></td>
+      <td rowspan="3">Arquitetura de Computadores<br><span class="teacher-name">Gustavo Cardial</span><span class="class-location">LAB 2</span></td>
+      <td rowspan="3">Algoritmos<br><span class="teacher-name">Breno Silveira</span><span class="class-location">LAB 2</span></td>
+      <td rowspan="3">Inglês Técnico<br><span class="teacher-name">Francisco Marcelo</span><span class="class-location">SALA</span></td>
+      <td rowspan="2">IHC<br><span class="teacher-name">Mauricio Cunha</span><span class="class-location">LAB 2</span></td>
     </tr>
     <tr>
       <td>TARDE<br>14:20 - 15:10</td>
     </tr>
     <tr>
       <td>TARDE<br>15:10 - 16:00</td>
-      <td>Português Instrumental<br><span class="teacher-name">Risonete Amorim</span><span class="class-location">LAB 5</span></td>
+      <td>Português Instrumental<br><span class="teacher-name">Risonete Amorim</span><span class="class-location">SALA</span></td>
     </tr>
     <tr>
       <td>TARDE<br>16:00 - 16:20</td>
@@ -134,10 +134,10 @@ sidebar: false
     <tr>
       <td>TARDE<br>16:20 - 17:10</td>
       <td rowspan="2">IHC<br><span class="teacher-name">Mauricio Cunha</span><span class="class-location">LAB 2</span></td>
-      <td rowspan="2">Matemática Aplicada<br><span class="teacher-name">Paulo Roberto</span><span class="class-location">B 209</span></td>
-      <td rowspan="2">Matemática Aplicada<br><span class="teacher-name">Paulo Roberto</span><span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Matemática Aplicada<br><span class="teacher-name">Paulo Roberto</span><span class="class-location">SALA</span></td>
+      <td rowspan="2">Matemática Aplicada<br><span class="teacher-name">Paulo Roberto</span><span class="class-location">SALA</span></td>
       <td rowspan="2">Arquitetura de Computadores<br><span class="teacher-name">Gustavo Cardial</span><span class="class-location">LAB 2</span></td>
-      <td rowspan="2">Português Instrumental<br><span class="teacher-name">Risonete Amorim</span><span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Português Instrumental<br><span class="teacher-name">Risonete Amorim</span><span class="class-location">SALA</span></td>
     </tr>
     <tr>
       <td>TARDE<br>17:10 - 18:00</td>
@@ -146,7 +146,7 @@ sidebar: false
 </table>
 
 <table>
-  <caption>Sistemas para Internet - 3º Período</caption>
+  <caption>Sistemas para Internet — 3º Período</caption>
   <thead>
     <tr>
       <th></th>
@@ -160,19 +160,19 @@ sidebar: false
   <tbody>
     <tr>
       <td>TARDE<br>13:30 - 14:20</td>
-      <td rowspan="3">Orientação a Objetos<br><span class="teacher-name">Darueck Campos, Jonas Pontes</span><span class="class-location">LAB 5</span></td>
-      <td rowspan="2">Engenharia de Software II<br><span class="teacher-name">Flavio Farias</span><span class="class-location">B 210</span></td>
-      <td rowspan="3">Orientação a Objetos<br><span class="teacher-name">Darueck Campos, Jonas Pontes</span><span class="class-location">LAB 2</span></td>
-      <td rowspan="3">Redes de Computadores I<br><span class="teacher-name">Gustavo Cardial</span><span class="class-location">LAB 5</span></td>
-      <td rowspan="2">Engenharia de Software II<br><span class="teacher-name">Flavio Farias</span><span class="class-location">LAB 2</span></td>
+      <td rowspan="3">Orientação a Objetos<br><span class="teacher-name">Darueck Campos, Jonas Pontes</span><span class="class-location">LAB 1</span></td>
+      <td rowspan="2">Engenharia de Software II<br><span class="teacher-name">Flavio Farias</span><span class="class-location">LAB 1</span></td>
+      <td rowspan="3">Orientação a Objetos<br><span class="teacher-name">Darueck Campos, Jonas Pontes</span><span class="class-location">LAB 1</span></td>
+      <td rowspan="3">Redes de Computadores I<br><span class="teacher-name">Gustavo Cardial</span><span class="class-location">LAB 1</span></td>
+      <td rowspan="2">Engenharia de Software II<br><span class="teacher-name">Flavio Farias</span><span class="class-location">LAB 1</span></td>
     </tr>
     <tr>
       <td>TARDE<br>14:20 - 15:10</td>
     </tr>
     <tr>
       <td>TARDE<br>15:10 - 16:00</td>
-      <td>Estatística<br><span class="teacher-name">Erasmo Souza</span><span class="class-location">B 210</span></td>
-      <td>Redes de Computadores I<br><span class="teacher-name">Gustavo Cardial</span><span class="class-location">LAB 2</span></td>
+      <td>Estatística<br><span class="teacher-name">Erasmo Souza</span><span class="class-location">SALA</span></td>
+      <td>Redes de Computadores I<br><span class="teacher-name">Gustavo Cardial</span><span class="class-location">LAB 1</span></td>
     </tr>
     <tr>
       <td>TARDE<br>16:00 - 16:20</td>
@@ -180,11 +180,11 @@ sidebar: false
     </tr>
     <tr>
       <td>TARDE<br>16:20 - 17:10</td>
-      <td rowspan="2">Banco de Dados II<br><span class="teacher-name">Alvaro Rios</span><span class="class-location">LAB 5</span></td>
-      <td rowspan="2">Estatística<br><span class="teacher-name">Erasmo Souza</span><span class="class-location">B 210</span></td>
-      <td rowspan="2">Banco de Dados II<br><span class="teacher-name">Alvaro Rios</span><span class="class-location">B 210</span></td>
-      <td rowspan="2">Construção de Página Web II<br><span class="teacher-name">Marlon Teixeira</span><span class="class-location">LAB 5</span></td>
-      <td rowspan="2">Construção de Página Web II<br><span class="teacher-name">Marlon Teixeira</span><span class="class-location">LAB 2</span></td>
+      <td rowspan="2">Banco de Dados II<br><span class="teacher-name">Alvaro Rios</span><span class="class-location">LAB 1</span></td>
+      <td rowspan="2">Estatística<br><span class="teacher-name">Erasmo Souza</span><span class="class-location">SALA</span></td>
+      <td rowspan="2">Banco de Dados II<br><span class="teacher-name">Alvaro Rios</span><span class="class-location">LAB 1</span></td>
+      <td rowspan="2">Construção de Página Web II<br><span class="teacher-name">Marlon Teixeira</span><span class="class-location">LAB 1</span></td>
+      <td rowspan="2">Construção de Página Web II<br><span class="teacher-name">Marlon Teixeira</span><span class="class-location">LAB 1</span></td>
     </tr>
     <tr>
       <td>TARDE<br>17:10 - 18:00</td>
@@ -193,7 +193,7 @@ sidebar: false
 </table>
 
 <table>
-  <caption>Sistemas para Internet - 5º Período</caption>
+  <caption>Sistemas para Internet — 5º Período</caption>
   <thead>
     <tr>
       <th></th>
@@ -207,11 +207,11 @@ sidebar: false
   <tbody>
     <tr>
       <td>TARDE<br>13:30 - 14:20</td>
-      <td rowspan="3">Lab de Desenvolvimento I<br><span class="teacher-name">Marlon Teixeira, Flavio Farias</span><span class="class-location">LAB 4</span></td>
-      <td rowspan="3">Metodologia da Pesquisa<br><span class="teacher-name">Darueck Campos</span><span class="class-location">LAB 4</span></td>
-      <td rowspan="3">Programação Web II<br><span class="teacher-name">Marlon Teixeira</span><span class="class-location">LAB 4</span></td>
-      <td rowspan="3">Lab de Desenvolvimento I<br><span class="teacher-name">Marlon Teixeira, Flavio Farias</span><span class="class-location">LAB 4</span></td>
-      <td rowspan="3">Programação Web II<br><span class="teacher-name">Marlon Teixeira</span><span class="class-location">LAB 4</span></td>
+      <td rowspan="3">Lab de Desenvolvimento I<br><span class="teacher-name">Marlon Teixeira, Flavio Farias</span><span class="class-location">LAB 5</span></td>
+      <td rowspan="3">Metodologia da Pesquisa<br><span class="teacher-name">Darueck Campos</span><span class="class-location">LAB 5</span></td>
+      <td rowspan="3">Programação Web II<br><span class="teacher-name">Marlon Teixeira</span><span class="class-location">LAB 5</span></td>
+      <td rowspan="3">Lab de Desenvolvimento I<br><span class="teacher-name">Marlon Teixeira, Flavio Farias</span><span class="class-location">LAB 5</span></td>
+      <td rowspan="3">Programação Web II<br><span class="teacher-name">Marlon Teixeira</span><span class="class-location">LAB 5</span></td>
     </tr>
     <tr>
       <td>TARDE<br>14:20 - 15:10</td>
@@ -225,15 +225,15 @@ sidebar: false
     </tr>
     <tr>
       <td>TARDE<br>16:20 - 17:10</td>
-      <td rowspan="2">Desenv. p/ Dispositivos Móveis I<br><span class="teacher-name">Flavio Farias</span><span class="class-location">LAB 4</span></td>
-      <td>Metodologia da Pesquisa<br><span class="teacher-name">Darueck Campos</span><span class="class-location">LAB 4</span></td>
-      <td rowspan="2">Metodologia da Pesquisa<br><span class="teacher-name">Darueck Campos</span><span class="class-location">LAB 4</span></td>
-      <td rowspan="2">Legislação Aplicada<br><span class="teacher-name">Claudia Almeida</span><span class="class-location">LAB 4</span></td>
-      <td rowspan="2">Desenv. p/ Dispositivos Móveis I<br><span class="teacher-name">Flavio Farias</span><span class="class-location">LAB 4</span></td>
+      <td rowspan="2">Desenv. p/ Dispositivos Móveis I<br><span class="teacher-name">Flavio Farias</span><span class="class-location">LAB 5</span></td>
+      <td>Metodologia da Pesquisa<br><span class="teacher-name">Darueck Campos</span><span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Metodologia da Pesquisa<br><span class="teacher-name">Darueck Campos</span><span class="class-location">LAB 5</span></td>
+      <td rowspan="2">Legislação Aplicada<br><span class="teacher-name">Claudia Almeida</span><span class="class-location">SALA</span></td>
+      <td rowspan="2">Desenv. p/ Dispositivos Móveis I<br><span class="teacher-name">Flavio Farias</span><span class="class-location">LAB 5</span></td>
     </tr>
     <tr>
       <td>TARDE<br>17:10 - 18:00</td>
-      <td>Legislação Aplicada<br><span class="teacher-name">Claudia Almeida</span><span class="class-location">LAB 4</span></td>
+      <td>Legislação Aplicada<br><span class="teacher-name">Claudia Almeida</span><span class="class-location">SALA</span></td>
     </tr>
   </tbody>
 </table>
