--- a/content/calendario/_index.html
+++ b/content/calendario/_index.html
@@ -9,6 +9,10 @@ sidebar: false
         max-width: none;
         min-width: fit-content;
     }
+    .calendario .month-label {
+        align-items: flex-start;
+        padding-top: 14px;
+    }
 }
 
 .calendario .month {
