Add separators between calendar events on mobile and remove static calendario page

--- a/content/calendario/_index.html
+++ b/content/calendario/_index.html
@@ -116,6 +116,16 @@ sidebar: false
         align-items: flex-start;
         padding-top: 14px;
     }
+    .calendario .events li {
+        border-bottom: 1px solid #ddd;
+        padding-bottom: 4px;
+        margin-bottom: 4px;
+    }
+    .calendario .events li:last-child {
+        border-bottom: none;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
 }
 </style>
 
