--- a/content/calendario/_index.html
+++ b/content/calendario/_index.html
@@ -4,25 +4,24 @@ sidebar: false
 ---
 
 <script>
-// Ajusta o viewport em mobile para que o calendário caiba na tela
-(function() {
+document.addEventListener('DOMContentLoaded', function() {
     if (window.innerWidth <= 768) {
-        var viewport = document.querySelector('meta[name="viewport"]');
-        if (viewport) {
-            viewport.setAttribute('content', 'width=900');
+        var calendario = document.querySelector('.calendario');
+        if (calendario) {
+            var parent = calendario.parentElement;
+            var parentStyle = getComputedStyle(parent);
+            var availableWidth = parent.clientWidth - parseFloat(parentStyle.paddingLeft) - parseFloat(parentStyle.paddingRight);
+            var targetWidth = 900;
+            if (availableWidth < targetWidth) {
+                calendario.style.width = targetWidth + 'px';
+                calendario.style.zoom = (availableWidth / targetWidth).toString();
+            }
         }
     }
-})();
+});
 </script>
 
 <style>
-@media screen and (max-width: 768px) {
-    .container, .container--outer, .wrapper {
-        max-width: none;
-        min-width: fit-content;
-    }
-}
-
 .calendario .month {
     display: flex;
     border: 1px solid #000;
