Add classroom numbers to schedule tables

--- a/content/horarios/_index.html
+++ b/content/horarios/_index.html
@@ -116,7 +116,7 @@ document.addEventListener('DOMContentLoaded', function() {
       <td rowspan="3">Algoritmos<br><span class="teacher-name">Breno Silveira</span><span class="class-location">LAB 2</span></td>
       <td rowspan="3">Arquitetura de Computadores<br><span class="teacher-name">Gustavo Cardial</span><span class="class-location">LAB 2</span></td>
       <td rowspan="3">Algoritmos<br><span class="teacher-name">Breno Silveira</span><span class="class-location">LAB 2</span></td>
-      <td rowspan="3">Inglês Técnico<br><span class="teacher-name">Francisco Marcelo</span><span class="class-location">SALA</span></td>
+      <td rowspan="3">Inglês Técnico<br><span class="teacher-name">Francisco Marcelo</span><span class="class-location">SALA B-208</span></td>
       <td rowspan="2">IHC<br><span class="teacher-name">Mauricio Cunha</span><span class="class-location">LAB 2</span></td>
     </tr>
     <tr>
@@ -124,7 +124,7 @@ document.addEventListener('DOMContentLoaded', function() {
     </tr>
     <tr>
       <td>TARDE<br>15:10 - 16:00</td>
-      <td>Português Instrumental<br><span class="teacher-name">Risonete Amorim</span><span class="class-location">SALA</span></td>
+      <td>Português Instrumental<br><span class="teacher-name">Risonete Amorim</span><span class="class-location">SALA B-208</span></td>
     </tr>
     <tr>
       <td>TARDE<br>16:00 - 16:20</td>
@@ -133,10 +133,10 @@ document.addEventListener('DOMContentLoaded', function() {
     <tr>
       <td>TARDE<br>16:20 - 17:10</td>
       <td rowspan="2">IHC<br><span class="teacher-name">Mauricio Cunha</span><span class="class-location">LAB 2</span></td>
-      <td rowspan="2">Matemática Aplicada<br><span class="teacher-name">Paulo Roberto</span><span class="class-location">SALA</span></td>
-      <td rowspan="2">Matemática Aplicada<br><span class="teacher-name">Paulo Roberto</span><span class="class-location">SALA</span></td>
+      <td rowspan="2">Matemática Aplicada<br><span class="teacher-name">Paulo Roberto</span><span class="class-location">SALA B-208</span></td>
+      <td rowspan="2">Matemática Aplicada<br><span class="teacher-name">Paulo Roberto</span><span class="class-location">SALA B-208</span></td>
       <td rowspan="2">Arquitetura de Computadores<br><span class="teacher-name">Gustavo Cardial</span><span class="class-location">LAB 2</span></td>
-      <td rowspan="2">Português Instrumental<br><span class="teacher-name">Risonete Amorim</span><span class="class-location">SALA</span></td>
+      <td rowspan="2">Português Instrumental<br><span class="teacher-name">Risonete Amorim</span><span class="class-location">SALA B-208</span></td>
     </tr>
     <tr>
       <td>TARDE<br>17:10 - 18:00</td>
@@ -170,7 +170,7 @@ document.addEventListener('DOMContentLoaded', function() {
     </tr>
     <tr>
       <td>TARDE<br>15:10 - 16:00</td>
-      <td>Estatística<br><span class="teacher-name">Erasmo Souza</span><span class="class-location">SALA</span></td>
+      <td>Estatística<br><span class="teacher-name">Erasmo Souza</span><span class="class-location">SALA B-209</span></td>
       <td>Redes de Computadores I<br><span class="teacher-name">Gustavo Cardial</span><span class="class-location">LAB 1</span></td>
     </tr>
     <tr>
@@ -180,7 +180,7 @@ document.addEventListener('DOMContentLoaded', function() {
     <tr>
       <td>TARDE<br>16:20 - 17:10</td>
       <td rowspan="2">Banco de Dados II<br><span class="teacher-name">Alvaro Rios</span><span class="class-location">LAB 1</span></td>
-      <td rowspan="2">Estatística<br><span class="teacher-name">Erasmo Souza</span><span class="class-location">SALA</span></td>
+      <td rowspan="2">Estatística<br><span class="teacher-name">Erasmo Souza</span><span class="class-location">SALA B-209</span></td>
       <td rowspan="2">Banco de Dados II<br><span class="teacher-name">Alvaro Rios</span><span class="class-location">LAB 1</span></td>
       <td rowspan="2">Construção de Página Web II<br><span class="teacher-name">Marlon Teixeira</span><span class="class-location">LAB 1</span></td>
       <td rowspan="2">Construção de Página Web II<br><span class="teacher-name">Marlon Teixeira</span><span class="class-location">LAB 1</span></td>
@@ -227,12 +227,12 @@ document.addEventListener('DOMContentLoaded', function() {
       <td rowspan="2">Desenv. p/ Dispositivos Móveis I<br><span class="teacher-name">Flavio Farias</span><span class="class-location">LAB 5</span></td>
       <td>Metodologia da Pesquisa<br><span class="teacher-name">Darueck Campos</span><span class="class-location">LAB 5</span></td>
       <td rowspan="2">Metodologia da Pesquisa<br><span class="teacher-name">Darueck Campos</span><span class="class-location">LAB 5</span></td>
-      <td rowspan="2">Legislação Aplicada<br><span class="teacher-name">Claudia Almeida</span><span class="class-location">SALA</span></td>
+      <td rowspan="2">Legislação Aplicada<br><span class="teacher-name">Claudia Almeida</span><span class="class-location">SALA B-210</span></td>
       <td rowspan="2">Desenv. p/ Dispositivos Móveis I<br><span class="teacher-name">Flavio Farias</span><span class="class-location">LAB 5</span></td>
     </tr>
     <tr>
       <td>TARDE<br>17:10 - 18:00</td>
-      <td>Legislação Aplicada<br><span class="teacher-name">Claudia Almeida</span><span class="class-location">SALA</span></td>
+      <td>Legislação Aplicada<br><span class="teacher-name">Claudia Almeida</span><span class="class-location">SALA B-210</span></td>
     </tr>
   </tbody>
 </table>
